tests/golden/errors/partial_chain.kso
main = print "steeping the finest uji sencha" >> print "pouring the hot water"
  >> print "serving it in the warmed cups with seasonal wagashi"
