tests/golden/errors/partial_chain.stderr
error[formatting]: no partial chaining: a chain fits on one line, or each step gets its own `>>` continuation line
  --> partial_chain.kso:1:47
   1 | main = print "steeping the finest uji sencha" >> print "pouring the hot water"
                                                     ^
